Arreglo de errores y Inicio de Permisos