@@ -16,6 +16,32 @@
         <exec.mainClass>com.mycompany.inscripcionesjo.InscripcionesJO</exec.mainClass>
         <maven.compiler.release>22</maven.compiler.release>
     </properties>
+    
+    <profiles>
+        <profile>
+            <id>windows</id>
+            <activation>
+                <os>
+                    <family>Windows</family>
+                </os>
+            </activation>
+            <properties>
+                <working.dir>C:\\Users\\intel\\Documents\\NetBeansProjects\\Sistema-Inscripciones-Maven</working.dir>
+            </properties>
+        </profile>
+        <profile>
+            <id>mac</id>
+            <activation>
+                <os>
+                    <family>mac</family>
+                </os>
+            </activation>
+            <properties>
+                <working.dir>/Users/mauricioteranlimari/Desktop/Sistema-Inscripciones-Maven</working.dir>
+            </properties>
+        </profile>
+    </profiles>
+
 
     <dependencies>
         <!-- JavaFX desde Maven Central -->
@@ -82,11 +108,30 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.8</version>
+               
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.1.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
-                    <mainClass>com.mycompany.inscripcionesjo.InscripcionesJO</mainClass>
+                    <executable>java</executable>
+                    <workingDirectory>${working.dir}</workingDirectory>
+                    <arguments>
+                        <argument>-Xmx1536m</argument>  <!-- Aquí el heap máximo -->
+                        <argument>--module-path</argument>
+                        <argument>/Users/mauricioteranlimari/javafx-sdk-24.0.1/lib</argument>
+                        <argument>--add-modules</argument>
+                        <argument>javafx.controls,javafx.fxml,javafx.swing</argument>
+                        <argument>-cp</argument>
+                        <argument>%classpath</argument>
+                        <argument>com.mycompany.inscripcionesjo.InscripcionesJO</argument>
+                    </arguments>
                 </configuration>
             </plugin>
         </plugins>
